Mobile version update

--- a/css/base.css
+++ b/css/base.css
@@ -75,3 +75,18 @@ img {
     margin: 0 auto;
     padding: 0 1.5rem;
 }
+
+@media (max-width: 768px) {
+    html {
+        scroll-padding-top: 0;
+        scroll-padding-bottom: 80px;
+    }
+    
+    .container {
+        padding: 0 1rem;
+    }
+    
+    body {
+        padding-bottom: 72px;
+    }
+}
